--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-caliper",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "vue caliper component.",
   "main": "dists/vue-caliper.js",
   "scripts": {
-    "test": "webpack --progress --watch --config build/webpack.config.js",
+    "build": "webpack --progress --watch --config build/webpack.config.js",
     "dev": "node build/dev-server.js"
   },
   "repository": {
