--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-caliper",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "vue caliper component.",
-  "main": "dists/vue-caliper.js",
+  "main": "src/vue-caliper.vue",
   "scripts": {
     "build": "webpack --progress --watch --config build/webpack.config.js",
     "dev": "node build/dev-server.js"
